# softhouse

./: .gitignore  README.md  in.csv  out_example.json  pyproject.toml  requirements.txt
profiling/: benchmark.py  generate.py  plot_scaling.py  run.py  single.py  tst.py
softhouse/: api.py  config.py  crunch.py  event.py  find_best_stocks.py  pandas.py  watch.py  winners.py
tests/: fixtures.py  generate.py  test_api.py  test_find_best_stocks.py  test_sortedlimitedlist.py  test_winners.py
