[tool.poetry]
name = "softhouse"
version = "0.1.0"
description = ""
authors = ["Axel Gagge <axel.gagge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
watchdog = "^3.0.0"
pandas = "^2.1.1"
pytest = "^7.4.3"
httpx = "^0.25.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
